working on mobile layout+ some styling fixes

--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@
 .card-container {
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
